feat: ajouter le support de Vercel Analytics pour le suivi des performances

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react-router-dom": "^5.3.3",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.22",
     "i18next": "^25.5.2",
     "react": "^19.1.1",
