--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@tailwindcss/vite": "^4.1.13",
     "@types/react-router-dom": "^5.3.3",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.23.22",
     "i18next": "^25.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.0.0",
     "react-router-dom": "^7.9.3",
-    "tailwindcss": "^4.1.13"
+    "tailwindcss": "^4.1.13",
+    "vercel": "^48.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
